# gen3deval-replication

./: .env.example  .env.opik.example  .gitignore  README.md  docker-compose.opik.yml  pyproject.toml  requirements.txt
configs/: eval.yaml
docker/opik/: nginx_local.conf
docs/: 03_result_schema.md  04_next_steps.md  06_前端使用.md  07_指标方法论.md  08_文献综述与指标决策.md  09_Tripo3D评测指标蓝图.md  10_arxiv论文清单.md  11_manifest说明.md  12_前端评测上下文与可视化说明.md  13_self_evolving_render_gate.md  14_self_evolving_render_quality.md  15_codebase_audit.md  16_LLM观测与调试.md  README.md
docs/archive/: 00_paper_notes.md  01_reproduction_plan.md  02_commands.md  03_result_schema.md  04_next_steps.md  05_优化方向.md  06_前端使用.md
paper/arxiv_survey/: INDEX.md  papers.csv  papers.json
scripts/: aggregate_elo.py  analyze_geometry_results.py  analyze_render_quality.py  analyze_render_success.py  build_pairs.py  collect_arxiv_literature.py  common.py  compute_geometry_metrics.py  download_objaverse_assets.py  evaluate_pairwise.py  observability.py  prepare_objaverse_sample.py  render_blender.py  score_assets.py  visualize_results.py  vlm_agent.py  vlm_types.py
skills/gen3deval-replication/: SKILL.md
web/: app.py
web/static/: app.js  index.html  styles.css
